build: bump version 12.3.13

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -301,7 +301,7 @@
     <string name="author_web">https://space.bilibili.com/393593468</string>
     <string name="category_crown_features">Área de Características Crown</string>
     <string name="category_enhanced_touch_settings">👆 Toque Multi-Punto Mejorado</string>
-    <string name="category_screen_position_settings">Configuración de Posición de Pantalla</string>
+    <string name="category_screen_position_settings">Configuración de Pantalla</string>
     <string name="check_for_updates">Buscar actualizaciones</string>
     <string name="copy_content">Copiar Contenido</string>
     <string name="copy_details">Copiar Detalles</string>
