--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -402,7 +402,7 @@
     <string name="mic_permission_required">需要麦克风权限</string>
     
     <!-- Screen position settings -->
-    <string name="category_screen_position_settings">📱 画面位置设置</string>
+    <string name="category_screen_position_settings">📱 显示设置</string>
     <string name="title_screen_position">画面位置</string>
     <string name="summary_screen_position">选择非全屏分辨率时画面的位置</string>
     <string name="title_screen_offset_x">水平偏移</string>
